--- a/src/build.xml
+++ b/src/build.xml
@@ -3,6 +3,7 @@
 	<property name="src" location="src"/>
 	<property name="build" location="build"/>
 	<property name="dist" location="dist"/>
+	<property name="WebContent" location="WebContent"/>
 	<target name="dist">
 		<mkdir dir="${dist}"/>
 		<jar destfile="${dist}/jwiki.jar">
@@ -10,6 +11,9 @@
 				<include name="**/*"/>
 				<exclude name="**/test/**"/>
 				<exclude name="**/*Test*"/>
+			</zipfileset>
+			<zipfileset dir="${WebContent}/WEB-INF" prefix="META-INF">
+				<include name="jwiki.tld"/>
 			</zipfileset>
 		</jar>
 	</target>
